fix loading icon postion and fix stretched chart

--- a/src/components/chart/chart.styles.css
+++ b/src/components/chart/chart.styles.css
@@ -1,11 +1,4 @@
-.chartjs-render-monitor{
-    width: 100%;
-    height: 480px !important;
-    position: absolute;
-    top:110px;
-    overflow: hidden;
-}
 #avg{
-    margin-top: 240px;
+    margin-top: -240px;
     color: rgb(0, 189, 0);
 }
