--- a/src/components/loading-screen/loading-screen.styles.css
+++ b/src/components/loading-screen/loading-screen.styles.css
@@ -9,8 +9,8 @@
 #loading-screen{
     width:100%;
     position: absolute;
-    top: 50%;
-    left: 50%;
+    top: calc(50% - 100px);
+    left: calc(50% - 50px);
     -moz-transform: translateX(-50%) translateY(-50%);
     -webkit-transform: translateX(-50%) translateY(-50%);
     transform: translateX(-50%) translateY(-50%);
